# alpha

./: .gitignore  CMakeLists.txt  README.md  build.sh  capture-config.json  h264_capture  main.cpp
base/: logger.cpp  logger.hpp  singletonModule.hpp  task.cpp  task.hpp  taskModule.cpp  taskModule.hpp
capture/: callbackModule.hpp  cameraCommon.hpp  captureModule.cpp  captureModule.hpp  codecModule.cpp  codecModule.hpp  frameQueue.cpp  frameQueue.hpp  operateInterface.hpp  worker.cpp  worker.hpp
include/: callbackModule.hpp  cameraCommon.hpp  captureModule.hpp  codecModule.hpp  frameQueue.hpp  proccessModule.hpp  singletonModule.hpp  task.hpp  taskModule.hpp
source/: captureModule.cpp  codecModule.cpp  frameQueue.cpp  processModule.cpp  task.cpp  taskModule.cpp
